--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ionicons": "^5.0.0",
     "pure-react-carousel": "^1.27.0",
     "react": "^16.12.0",
+    "react-accessible-accordion": "^3.0.1",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
