--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
     "typescript": "3.7.4"
   },
   "scripts": {
@@ -49,7 +48,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.0.0"
+    "@capacitor/cli": "2.0.0",
+    "react-scripts": "3.4.0"
   },
   "description": "An Ionic project"
 }
