--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "markdown-json": "^1.4.1",
     "markdown-loader": "^5.1.0",
     "md-2-json": "^1.0.6",
+    "prop-types": "^15.7.2",
     "pure-react-carousel": "^1.27.0",
     "react": "^16.12.0",
     "react-accessible-accordion": "^3.0.1",
