--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "html-loader": "^1.1.0",
@@ -30,6 +31,7 @@
     "react-accessible-accordion": "^3.0.1",
     "react-dom": "^16.12.0",
     "react-markdown": "^4.3.1",
+    "react-responsive": "^8.0.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "typescript": "3.7.4"
