--- a/package.json
+++ b/package.json
@@ -19,13 +19,7 @@
     "@types/react-responsive": "^8.0.2",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
-    "html-loader": "^1.1.0",
     "ionicons": "^5.0.0",
-    "json-transforms": "^1.1.2",
-    "markdown-json": "^1.4.1",
-    "markdown-loader": "^5.1.0",
-    "md-2-json": "^1.0.6",
-    "prop-types": "^15.7.2",
     "pure-react-carousel": "^1.27.0",
     "react": "^16.12.0",
     "react-accessible-accordion": "^3.0.1",
@@ -38,9 +32,7 @@
     "react-router-use-location-state": "^2.3.1",
     "react-share": "^4.1.0",
     "remove-markdown": "^0.3.0",
-    "typeface-old-standard-tt": "0.0.71",
-    "typescript": "3.7.4",
-    "use-location-state": "^2.3.1"
+    "typescript": "3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
