--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -5,9 +5,5 @@
   "npmClient": "npm",
   "webDir": "build",
   "cordova": {},
-  "linuxAndroidStudioPath": "/home/vic/Programs/android-studio/bin/studio.sh",
-  "server": {
-    "url": "http://192.168.1.19:8101",
-    "cleartext": true
-  }
+  "linuxAndroidStudioPath": "/home/vic/Programs/android-studio/bin/studio.sh"
 }
