--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gebeden-ionic",
   "version": "0.0.1",
   "private": true,
+  "homepage": "https://gebeden.gelovenleren.net/",
   "dependencies": {
     "@capacitor/android": "^2.0.0",
     "@capacitor/core": "2.0.0",
@@ -38,7 +39,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -58,6 +61,7 @@
   "devDependencies": {
     "@capacitor/cli": "2.0.0",
     "@types/webpack-env": "^1.15.2",
+    "gh-pages": "^2.2.0",
     "react-scripts": "3.4.0"
   },
   "description": "An Ionic project"
